max_price update

--- a/views/new1_dashboard.ejs
+++ b/views/new1_dashboard.ejs
@@ -1068,7 +1068,7 @@
                         <td>${result.p_des}</td>
                         <td>${result.p_category}</td>
                         <td>${result.total_amount}</td>
-                        <td>${result.min_price}</td>
+                        <td>$${result.min_price} - $${result.max_price}</td>
                     </tr>`;
                 });
             } else {
