--- a/views/new1_dashboard.ejs
+++ b/views/new1_dashboard.ejs
@@ -585,7 +585,7 @@
                           scope="col"
                           class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400"
                         >
-                          Unit Price
+                          Unit Price($)
                         </th>
 
                         <th
@@ -597,12 +597,9 @@
                       </tr>
                     </thead>
                     <tbody
-
-                        id = "results"
+                      id="results"
                       class="bg-gray-100 divide-y divide-gray-200 dark:bg-gray-800 dark:divide-gray-700"
-                    >
-
-                    </tbody>
+                    ></tbody>
                   </table>
                 </div>
               </div>
@@ -898,7 +895,7 @@
                       class="bg-white border shadow-md border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5"
                       required=""
                     >
-                    <% items.forEach( row => { %>
+                      <% items.forEach( row => { %>
                       <option value="<%=row.p_name%>"><%=row.p_name%></option>
                       <%})%>
                     </select>
@@ -916,9 +913,9 @@
                       class="bg-white border shadow-md border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5"
                       required=""
                     >
-                    <% suppliers.forEach( row => { %>
-                        <option value="<%=row.s_name%>"><%=row.s_name%></option>
-                    <%})%>
+                      <% suppliers.forEach( row => { %>
+                      <option value="<%=row.s_name%>"><%=row.s_name%></option>
+                      <%})%>
                     </select>
                   </div>
                 </div>
@@ -1037,65 +1034,176 @@
         modal2.classList.add("hidden");
       });
 
-
-
       // Get references to elements
-    const searchInput = document.querySelector('#search');
-    const resultsBody = document.querySelector('#results');
+      const searchInput = document.querySelector("#search");
+      const resultsBody = document.querySelector("#results");
 
-    // Initial load of data
-    load_data();
+      // Initial load of data
+      load_data();
 
-    // Load data function
-    function load_data(query = '') {
+      // Load data function
+      function load_data(query = "") {
         const request = new XMLHttpRequest();
 
         // Configure the request
-        request.open('GET', `/search?q=${query}`);
+        request.open("GET", `/search?q=${query}`);
 
         // When the request is complete
         request.onload = () => {
-            const results = JSON.parse(request.responseText);
-            let html = '';
+          const results = JSON.parse(request.responseText);
+          let html = "";
 
-            // Generate HTML for each result
-            if (results.length > 0) {
-                results.forEach(result => {
-                    html += `
-                    <tr>
-                        <td>${result.p_name}</td>
-                        <td>${result.p_code}</td>
-                        <td>${result.p_des}</td>
-                        <td>${result.p_category}</td>
-                        <td>${result.total_amount}</td>
-                        <td>$${result.min_price} - $${result.max_price}</td>
-                    </tr>`;
-                });
-            } else {
-                // No results found
-                html += `
+          // Generate HTML for each result
+          if (results.length > 0) {
+            results.forEach((result) => {
+              html += ` <tr class="hover:bg-gray-200 dark:hover:bg-gray-700">
+                        <td class="w-4 p-4">
+                          <div class="flex items-center">
+                            <svg
+                              fill="#000000"
+                              width="30px"
+                              height="30px"
+                              viewBox="-2 -2 24.00 24.00"
+                              xmlns="http://www.w3.org/2000/svg"
+                              stroke="#000000"
+                              stroke-width="2"
+                            >
+                              <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                              <g
+                                id="SVGRepo_tracerCarrier"
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                                stroke="#CCCCCC"
+                                stroke-width="0.04"
+                              ></g>
+                              <g id="SVGRepo_iconCarrier">
+                                <path
+                                  d="M7.8 10a2.2 2.2 0 0 0 4.4 0 2.2 2.2 0 0 0-4.4 0z"
+                                ></path>
+                              </g>
+                            </svg>
+                          </div>
+                        </td>
+                        <td
+                          class="flex p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                        >
+                          <img
+                            class="w-10 h-10 rounded-full"
+                            src="/images/product_demo.png"
+                            alt="Neil Sims avatar"
+                          />
+
+                          <div
+                            class="ml-2 text-sm font-normal text-gray-500 dark:text-gray-400"
+                          >
+                            <div
+                              class="text-base font-semibold text-gray-900 dark:text-white"
+                            >
+                            ${result.p_name}
+                            </div>
+                            <div
+                              class="overflow-hidden text-base font-normal text-gray-500 truncate xl:max-w-xs dark:text-gray-400"
+                            >
+                            ${result.p_des}
+                            </div>
+                          </div>
+                        </td>
+                        <td
+                          class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                        >
+                        ${result.p_code}
+                        </td>
+                        <td
+                          class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                        >
+                        ${result.p_category}
+                        </td>
+
+                        <td
+                          class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                        >
+                        ${result.total_amount}
+                        </td>
+                        <td
+                          class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                        >
+                        ${result.min_price} - ${result.max_price}
+                        </td>
+                        <td class="p-4 space-x-2 whitespace-nowrap">
+                          <button
+                            type="button"
+                            id="updateProductButton"
+                            data-drawer-target="drawer-update-product-default"
+                            data-drawer-show="drawer-update-product-default"
+                            aria-controls="drawer-update-product-default"
+                            data-drawer-placement="right"
+                            class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white rounded-lg bg-yellow-700 hover:bg-yellow-800 focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
+                          >
+                            <svg
+                              class="w-4 h-4 mr-2"
+                              fill="currentColor"
+                              viewBox="0 0 20 20"
+                              xmlns="http://www.w3.org/2000/svg"
+                            >
+                              <path
+                                d="M17.414 2.586a2 2 0 00-2.828 0L7 10.172V13h2.828l7.586-7.586a2 2 0 000-2.828z"
+                              ></path>
+                              <path
+                                fill-rule="evenodd"
+                                d="M2 6a2 2 0 012-2h4a1 1 0 010 2H4v10h10v-4a1 1 0 112 0v4a2 2 0 01-2 2H4a2 2 0 01-2-2V6z"
+                                clip-rule="evenodd"
+                              ></path>
+                            </svg>
+                            cart
+                          </button>
+                          <button
+                            type="button"
+                            id="deleteProductButton"
+                            data-drawer-target="drawer-delete-product-default"
+                            data-drawer-show="drawer-delete-product-default"
+                            aria-controls="drawer-delete-product-default"
+                            data-drawer-placement="right"
+                            class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-red-700 rounded-lg hover:bg-red-800 focus:ring-4 focus:ring-red-300 dark:focus:ring-red-900"
+                          >
+                            <svg
+                              class="w-4 h-4 mr-2"
+                              fill="currentColor"
+                              viewBox="0 0 20 20"
+                              xmlns="http://www.w3.org/2000/svg"
+                            >
+                              <path
+                                fill-rule="evenodd"
+                                d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z"
+                                clip-rule="evenodd"
+                              ></path>
+                            </svg>
+                            Damaged
+                          </button>
+                        </td>
+                      </tr>
+                      `;
+            });
+          } else {
+            // No results found
+            html += `
                 <tr>
                     <td colspan="5" class="text-center">No Data Found</td>
                 </tr>`;
-            }
+          }
 
-            // Update the results table
-            resultsBody.innerHTML = html;
+          // Update the results table
+          resultsBody.innerHTML = html;
         };
 
         // Send the request
         request.send();
-    }
+      }
 
-    // Listen for input changes in the search field
-    searchInput.addEventListener('input', () => {
+      // Listen for input changes in the search field
+      searchInput.addEventListener("input", () => {
         const query = searchInput.value;
         load_data(query);
-    });
-
-
-
-      
+      });
     </script>
 
     <!-- <script async defer src="https://buttons.github.io/buttons.js "></script> -->
