--- a/views/tem_dash.ejs
+++ b/views/tem_dash.ejs
@@ -585,7 +585,7 @@
                           scope="col"
                           class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400"
                         >
-                          Unit Price
+                          Unit Price($)
                         </th>
 
                         <th
