--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -553,7 +553,7 @@
                         <td
                           class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
                         >
-                          <%= row.p_price %> $<span class="cart-price"> 10 </span>
+                          $<span class="cart-price"> <%=row.p_price%> </span>
                         </td>
                         <td
                           class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
@@ -580,8 +580,8 @@
 
                             <input
                               type="number"
-                              value="0"
-                              min="0"
+                              value="1"
+                              min="1"
                               class="w-16 p-2 text-center border rounded-md focus:ring focus:ring-indigo-300 focus:border-indigo-300 appearance-none quantity"
                             />
 
@@ -611,6 +611,7 @@
                           <span class="cart-subtotal"> 0.00 </span>
                         </td>
                         <td class="p-4 space-x-2 whitespace-nowrap">
+                          <a href="/changeStateFromCart?data=<%= encodeURIComponent(JSON.stringify(row)) %>" >
                           <button
                             type="button"
                             id="deleteProductButton"
@@ -634,6 +635,7 @@
                             </svg>
                             Remove
                           </button>
+                        </a>
                         </td>
                       </tr>
                       <% }) %>
@@ -740,16 +742,18 @@
                       for="product_name"
                       class="ml-2 block mb-2 text-sm font-medium text-gray-900"
                     >
-                      Customer Name
+                      Customer
                     </label>
-                    <input
-                      type="text"
-                      name="product_name"
-                      id="product_name"
+                    <select
+                      name="customer"
+                      id="customer"
                       class="bg-white border shadow-md border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5"
-                      placeholder="Head Phone"
                       required=""
-                    />
+                    >
+                    <%customers.forEach(row => {%>
+                      <option value="<%=row.shop_name%>"><%=row.shop_name%></option>
+                    <%});%>
+                    </select>
                   </div>
                   <div>
                     <label
@@ -786,10 +790,10 @@
                     required=""
                   />
                 </div>
+
                 <div class="grid grid-cols-2 gap-4">
                   <div>
                     <label
-                      for="total"
                       class="ml-2 block mb-2 text-sm font-medium text-gray-900"
                     >
                       Total Amount
@@ -798,10 +802,9 @@
 
                   <div>
                     <label
-                      for="amount"
                       class="ml-2 block mb-2 text-sm font-medium text-gray-900"
                     >
-                      <span class="cart-total2">0.00</span>
+                      <span class="cart-total2" id="cart_total3"> 0.00 </span>
                     </label>
                   </div>
                 </div>
@@ -809,7 +812,6 @@
                 <div class="grid grid-cols-2 gap-4">
                   <div>
                     <label
-                      for="mf_date"
                       class="mt-3 ml-2 block mb-2 text-sm font-medium text-gray-900"
                     >
                       Discount(%)
@@ -823,6 +825,7 @@
                       value="0.00"
                       class="bg-white border shadow-md border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5"
                       required=""
+                      onchange="calculateTotal()"
                     />
                   </div>
                 </div>
@@ -830,7 +833,6 @@
                 <div class="grid grid-cols-2 gap-4">
                   <div>
                     <label
-                      for="total"
                       class="ml-2 block mb-2 text-sm font-medium text-gray-900"
                     >
                       Grand Total
@@ -839,10 +841,48 @@
 
                   <div>
                     <label
-                      for="amount"
                       class="ml-2 block mb-2 text-sm font-medium text-gray-900"
                     >
-                      $<span>0.00</span>
+                      $<span id="grandTotal"> 0.00 </span>
+                    </label>
+                  </div>
+                </div>
+
+                <div class="grid grid-cols-2 gap-4">
+                  <div>
+                    <label
+                      class="mt-3 ml-2 block mb-2 text-sm font-medium text-gray-900"
+                    >
+                      Paid
+                    </label>
+                  </div>
+                  <div>
+                    <input
+                      type="number"
+                      name="paid"
+                      id="paid"
+                      value="0.00"
+                      class="bg-white border shadow-md border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5"
+                      required=""
+                      onchange="calculateTotaldue()"
+                    />
+                  </div>
+                </div>
+
+                <div class="grid grid-cols-2 gap-4">
+                  <div>
+                    <label
+                      class="ml-2 block mb-2 text-sm font-medium text-gray-900"
+                    >
+                      Due
+                    </label>
+                  </div>
+
+                  <div>
+                    <label
+                      class="ml-2 block mb-2 text-sm font-medium text-gray-900"
+                    >
+                      $<span id="due"> 0.00 </span>
                     </label>
                   </div>
                 </div>
@@ -858,7 +898,6 @@
               </form>
             </div>
           </div>
-          <!-- <button id="closePopup">Close</button> -->
         </div>
       </div>
     </div>
@@ -959,6 +998,40 @@
 
       // Initial update of totals
       updateTotals();
+    </script>
+
+
+    <script>
+      function calculateTotal() {
+        const totalAmount = parseFloat(
+          document.getElementById("cart_total3").textContent
+        );
+        const discountPercentage = parseFloat(
+          document.getElementById("discount").value
+        );
+        const grandTotalElement = document.getElementById("grandTotal");
+
+        const discountAmount = (totalAmount * discountPercentage) / 100;
+        const grandTotal = totalAmount - discountAmount;
+
+        grandTotalElement.textContent = " " + grandTotal.toFixed(2);
+      }
+    </script>
+
+    <script>
+      function calculateTotaldue() {
+        const totalAmount1 = parseFloat(
+          document.getElementById("grandTotal").textContent
+        );
+        const discountPercentage1 = parseFloat(
+          document.getElementById("paid").value
+        );
+        const grandTotalElement = document.getElementById("due");
+
+        const grandTotal1 = totalAmount1 - discountPercentage1;
+
+        grandTotalElement.textContent = " " + grandTotal1.toFixed(2);
+      }
     </script>
 
     <!-- <script async defer src="https://buttons.github.io/buttons.js "></script> -->
