--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -772,17 +772,17 @@
 
                 <div>
                   <label
-                    for="product_description"
+                    for="payment_address"
                     class="ml-2 block mb-2 text-sm font-medium text-gray-900"
                   >
                     Payment Address
                   </label>
                   <input
                     type="text"
-                    name="product_description"
-                    id="product_description"
+                    name="payment_address"
+                    id="payment_address"
                     class="bg-white border shadow-md border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5"
-                    placeholder="no description yet"
+                    placeholder="no address yet"
                     required=""
                   />
                 </div>
