--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -401,7 +401,7 @@
               class="grid w-full grid-cols-1 gap-4 mt-4 xl:grid-cols-2 2xl:grid-cols-3"
             >
               <div
-                class="items-center justify-between p-4 bg-white border border-gray-200 rounded-lg shadow-sm sm:flex dark:border-gray-700 sm:p-6 dark:bg-gray-800"
+                class="items-center justify-between p-4 bg-white border border-gray-200 shadow-md hover:shadow-2xl sm:flex dark:border-gray-700 sm:p-6 dark:bg-gray-800"
               >
                 <div class="w-full">
                   <h3
@@ -411,15 +411,13 @@
                   </h3>
                   <span
                     class="text-2xl font-bold leading-none text-gray-900 sm:text-3xl dark:text-white"
-                    >%= data.total_balance %>
+                  >
+                    %= data.total_balance %>
                   </span>
-                  <p
-                    class="flex items-center text-base font-normal text-gray-500 dark:text-gray-400"
-                  ></p>
                 </div>
               </div>
               <div
-                class="items-center justify-between p-4 bg-white border border-gray-200 rounded-lg shadow-sm sm:flex dark:border-gray-700 sm:p-6 dark:bg-gray-800"
+                class="items-center justify-between p-4 bg-white border border-gray-200 rounded-xl shadow-md hover:shadow-2xl sm:flex dark:border-gray-700 sm:p-6 dark:bg-gray-800"
               >
                 <div class="w-full">
                   <h3
@@ -429,11 +427,9 @@
                   </h3>
                   <span
                     class="text-2xl font-bold leading-none text-gray-900 sm:text-3xl dark:text-white"
-                    >%= data.total_sales %></span
                   >
-                  <p
-                    class="flex items-center text-base font-normal text-gray-500 dark:text-gray-400"
-                  ></p>
+                    %= data.total_sales %>
+                  </span>
                 </div>
                 <div class="w-full" id="week-signups-chart"></div>
               </div>
@@ -448,11 +444,9 @@
                   </h3>
                   <span
                     class="text-2xl font-bold leading-none text-gray-900 sm:text-3xl dark:text-white"
-                    >%= data.total_supply %>
+                  >
+                    %= data.total_supply %>
                   </span>
-                  <p
-                    class="flex items-center text-base font-normal text-gray-500 dark:text-gray-400"
-                  ></p>
                 </div>
                 <div class="w-full" id="week-signups-chart"></div>
               </div>
@@ -467,11 +461,9 @@
                   </h3>
                   <span
                     class="text-2xl font-bold leading-none text-gray-900 sm:text-3xl dark:text-white"
-                    >%= data.total_dam_exp %></span
                   >
-                  <p
-                    class="flex items-center text-base font-normal text-gray-500 dark:text-gray-400"
-                  ></p>
+                    %= data.total_dam_exp %>
+                  </span>
                 </div>
                 <div class="w-full" id="week-signups-chart"></div>
               </div>
@@ -487,11 +479,8 @@
                   <span
                     class="text-2xl font-bold leading-none text-gray-900 sm:text-3xl dark:text-white"
                   >
-                    %= data.total_due%></span
-                  >
-                  <p
-                    class="flex items-center text-base font-normal text-gray-500 dark:text-gray-400"
-                  ></p>
+                    %= data.total_due %>
+                  </span>
                 </div>
                 <div class="w-full" id="week-signups-chart"></div>
               </div>
