--- a/views/damaged_products.ejs
+++ b/views/damaged_products.ejs
@@ -397,9 +397,9 @@
             <div class="w-full mb-1">
               <div class="mb-4">
                 <h1
-                  class="text-xl font-semibold text-gray-900 sm:text-2xl dark:text-white"
+                  class="text-xl font-semibold text-red-500 sm:text-2xl dark:text-white"
                 >
-                  All Products
+                  All Damaged Products
                 </h1>
               </div>
               <div
@@ -463,33 +463,33 @@
                           scope="col"
                           class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400"
                         >
-                          Product Code
+                          Damage Date
                         </th>
                         <th
                           scope="col"
                           class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400"
                         >
-                          Category
+                          Price
                         </th>
                         <th
                           scope="col"
                           class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400"
                         >
-                          Available
+                          Damaged Amount
                         </th>
 
                         <th
                           scope="col"
                           class="p-4 text-xs font-medium text-left text-gray-500 uppercase dark:text-gray-400"
                         >
-                          Unit Price
+                          Total Cost
                         </th>
                       </tr>
                     </thead>
                     <tbody
                       class="bg-gray-100 divide-y divide-gray-200 dark:bg-gray-800 dark:divide-gray-700"
                     >
-                      <% for(let i=0;i<10;i++){ %>
+                      <% for(let i=0;i<6;i++){ %>
                       <tr class="hover:bg-gray-200 dark:hover:bg-gray-700">
                         <td class="w-4 p-4">
                           <div class="flex items-center">
@@ -538,19 +538,19 @@
                             <div
                               class="overflow-hidden text-base font-normal text-gray-500 truncate xl:max-w-xs dark:text-gray-400"
                             >
-                              %= row.description %>
+                              %= row.des %>
                             </div>
                           </div>
                         </td>
                         <td
                           class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
                         >
-                          %= row.p_code %>
+                          %= row.date_time %>
                         </td>
                         <td
                           class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
                         >
-                          %= row.p_category %>
+                          %= row.p_price %>
                         </td>
 
                         <td
@@ -559,12 +559,35 @@
                           %= row.amount %>
                         </td>
                         <td
-                          class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                          class="p-4 text-base font-medium text-red-500 whitespace-nowrap dark:text-white"
                         >
-                          %= row.price %>
+                          % row.p_price*row.amount %>
                         </td>
                       </tr>
                       <% } %>
+                      <tr class="bg-gray-200">
+                        <td class="w-4 p-4"></td>
+                        <td
+                          class="flex p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                        >
+                          Total Damaged Cost
+                        </td>
+                        <td
+                          class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                        ></td>
+                        <td
+                          class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                        ></td>
+
+                        <td
+                          class="p-4 text-base font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                        ></td>
+                        <td
+                          class="p-4 text-base font-medium text-red-600 whitespace-nowrap dark:text-white"
+                        >
+                          %= row.total_loss %>
+                        </td>
+                      </tr>
                     </tbody>
                   </table>
                 </div>
