--- a/views/due_payment.ejs
+++ b/views/due_payment.ejs
@@ -769,7 +769,7 @@
                                     </div>
                                     <div>
                                         <input
-                                            type="number"
+                                            type="float"
                                             name="paid"
                                             id="paid"
                                             value="0"
