--- a/views/view_invoice.ejs
+++ b/views/view_invoice.ejs
@@ -615,7 +615,7 @@
                                                         class="col-span-2 text-gray-500"
                                                         id="discount"
                                                     >
-                                                        $ <%=data.discount %>
+                                                        % <%=data.discount %>
                                                     </dd>
                                                 </dl>
 
